tests/compile-fail/pcap_socket_dropped_before_packet.stderr
error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/compile-fail/pcap_socket_dropped_before_packet.rs:15:6
   |
15 | // }
   |      ^ consider adding a `main` function to `$DIR/tests/compile-fail/pcap_socket_dropped_before_packet.rs`
